--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>StudentsWebapi</title>
-  <base href="/ng-webapi/">
+  <base href="/#/ng-webapi/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>html{box-sizing:border-box;}*,:after,:before{box-sizing:inherit;}body,html{margin:0;padding:0;}html{line-height:1.15;-webkit-text-size-adjust:100%;}body{margin:0;}</style><link rel="stylesheet" href="styles.f6949cac76a2f1de270a.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.f6949cac76a2f1de270a.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.803a827ce9044a2b8934.js" defer></script><script src="polyfills.4fd44df7d62527175de1.js" defer></script><script src="main.f317e48a8957f3273ec4.js" defer></script>
+<script src="runtime.803a827ce9044a2b8934.js" defer></script><script src="polyfills.4fd44df7d62527175de1.js" defer></script><script src="main.9dac10d5656af9d669d5.js" defer></script>
 
 </body></html>
