--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>StudentsWebapi</title>
-  <base href="/#/ng-webapi/">
+  <base href="#">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>html{box-sizing:border-box;}*,:after,:before{box-sizing:inherit;}body,html{margin:0;padding:0;}html{line-height:1.15;-webkit-text-size-adjust:100%;}body{margin:0;}</style><link rel="stylesheet" href="styles.f6949cac76a2f1de270a.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.f6949cac76a2f1de270a.css"></noscript></head>
